--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "clean": "rimraf dist",
     "dev": "tsx watch --env-file .env src/http/server.ts",
     "build": "tsc -p tsconfig.json && tsc-alias",
-    "start": "node src/http/server.js"
+    "start": "node src/http/server.js",
+    "vercel-build": "npx run build"
   },
   "keywords": [],
   "author": "",
@@ -17,17 +18,17 @@
     "@types/bcrypt": "^5.0.2",
     "@types/node": "^22.10.7",
     "@types/pg": "^8.11.10",
-    "drizzle-kit": "^0.30.2",
+    "prisma": "^6.2.1",
     "tsx": "^4.19.2",
     "typescript": "^5.7.3"
   },
   "dependencies": {
     "@fastify/cors": "^10.0.2",
     "@fastify/jwt": "^9.0.3",
+    "@prisma/client": "6.2.1",
     "bcrypt": "^5.1.1",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.7",
-    "drizzle-orm": "^0.38.4",
     "fastify": "^5.2.1",
     "fastify-type-provider-zod": "^4.0.2",
     "pg": "^8.13.1",
