--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
     "removeComments": true,
     "isolatedModules": true,
     "outDir": "./dist",
-    "rootDir": ".",
+    "rootDir": "./src",
     "allowJs": true,
     "baseUrl": "./",
     "paths": {
