--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "builds": [
     {
-      "src": "./dist/src/http/server.js",
+      "src": ".src/http/server.js",
       "use": "@vercel/node"
     }
   ],
